fixing css for checkbox errors and alignment of checkbox

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -3,9 +3,9 @@
     --label-color: #666;
     --border-color: #818a91;
     --form-error-color: #ff5f3f;
-    --button-primary-color: #5F8DDA;
+    --button-primary-color: #026169;
     --button-secondary-color: #666;
-    --button-primary-hover-color: #035fe6;
+    --button-primary-hover-color: #026169;
     --form-font-size-m: 22px;
     --form-font-size-s: 18px;
     --form-font-size-xs: 16px;
@@ -263,7 +263,7 @@ main .form button {
     border: var(--form-button-border);
     padding: var(--form-button-padding);
     font-size: var(--form-button-font-size);
-    border-radius: unset;
+    border-radius: 30px;
     width: 100%;
 }
 
@@ -370,12 +370,6 @@ main .file-wrapper .file-description button::after{
 
 main .form .button-wrapper button {
     cursor:pointer
-}
-
-main .form .button-wrapper button:hover {
-    border: 3px solid var(#fff);
-    color: #fff;
-    background-color: var(--button-secondary-color);
 }
 
 main .form .button-wrapper button[disabled] {
@@ -627,6 +621,7 @@ main .form form .horizontal {
  */
 [data-required="true"] > label::after {
   content: "*";
+  color: var(--form-error-color);
   padding-inline-start: 5px;
 }
 
@@ -638,7 +633,33 @@ main .form form .horizontal {
     content: none;
 }
 
-.radio-wrapper.field-invalid > input,
-.checkbox-wrapper.field-invalid > input {
+main .form form .checkbox-wrapper.field-invalid {
+    flex-wrap: wrap;
+}
+
+main .form form .checkbox-wrapper.field-invalid > .field-description {
+    order: 1;
+}
+
+main .form form .radio-wrapper.field-invalid > input,
+main .form form .checkbox-wrapper.field-invalid > input {
     outline: 1px solid var(--form-error-color);
+}
+
+main .form form .checkbox-wrapper.field-invalid > label {
+    flex-basis: 90%;
+}
+
+main .form form .checkbox-wrapper {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+main .form form .checkbox-wrapper label {
+    line-height: 1.5;
+}
+
+main .form form .checkbox-wrapper input {
+    margin-top: 6px;
 }
